--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,12 @@ footer{
     margin-bottom: 0px;
     padding: 10px 10px 0px 10px;
     color: white;
+    width: 100%;
 }
 
 
-
 .jumbotron{
+    padding: 10px 10px 0px 10px;
     background-color: #9D4EDD;
     color: white;
 }
