--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,13 @@ footer{
     padding: 0px 20px 0px 20px;
 }
 .card-img-top{
-    border-radius: 8px;
+    border-radius: 0px;
+    height: 300px;
+}
+
+.img-fluid{
+    width: 100%;
+    height: 100px;
 }
 .card-gadget{
     width: 20%;
