--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+body{
+    background-color: whitesmoke;
+}
+
 footer{
     background-color: #240046;
     margin-top: 10px;
@@ -6,13 +10,22 @@ footer{
     color: white;
     width: 100%;
 }
+
+.tab-content{
+    padding-top: 10px;
+}
 .breadcrumb{
     padding: 10px 20px 10px 20px;
-    background-color: lightgray;
+    background-color: white;
+    
 
 }
 .breadcrumb{
     margin-left:20px;
+}
+
+footer{
+    padding: 10px 10px;
 }
 
 .navbar-brand{
