--- a/styles.css
+++ b/styles.css
@@ -1,63 +1,82 @@
-body{
-    background-color: whitesmoke;
+body {
+  background-color: whitesmoke;
 }
 
-footer{
-    background-color: #240046;
-    margin-top: 10px;
-    margin-bottom: 0px;
-    padding: 10px 10px 0px 10px;
-    color: white;
-    width: 100%;
+footer {
+  background-color: #8686a8;
+  margin-top: 10px;
+  margin-bottom: 0px;
+  padding-top: 10px;
+  padding-bottom: 0px;
+  padding-left: 10px;
+  padding-right: 10px;
+  color: white;
+  width: 100%;
 }
 
-.tab-content{
-    padding-top: 10px;
-}
-.breadcrumb{
-    padding: 10px 20px 10px 20px;
-    background-color: white;
-    
-
-}
-.breadcrumb{
-    margin-left:20px;
+.tab-content {
+  padding-top: 10px;
 }
 
-footer{
-    padding: 10px 10px;
+.breadcrumb {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  background-color: white;
 }
 
-.navbar-brand{
-    padding: 0px 20px 0px 20px;
-}
-.card-img-top{
-    border-radius: 0px;
-    height: 300px;
+.breadcrumb {
+  margin-left: 20px;
 }
 
-.img-fluid{
-    width: 100%;
-    height: 100px;
-}
-.card-gadget{
-    width: 20%;
-    flex: 1 200px;
-    margin-top: 10px;
-} 
-.btn-compra{
-    width: 100%;
+footer {
+  padding: 10px 10px;
 }
 
-.jumbotron{
-    padding: 10px 10px 0px 10px;
-    background-color: #9D4EDD;
-    color: white;
-    margin-top: 50px;
+.navbar-brand {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
-.text-about{
-    text-align: justify;
-    margin-left: 20px;
-    margin-right: 20px;
+.card-img-top {
+  border-radius: 0px;
+  height: 300px;
 }
+
+.img-fluid {
+  width: 100%;
+  height: 100px;
+}
+
+.card-gadget {
+  width: 20%;
+  flex: 1 200px;
+  margin-top: 10px;
+  margin-bottom: 0px;
+}
+
+.btn-compra {
+  width: 100%;
+}
+
+.jumbotron {
+  padding-top: 10px;
+  padding-bottom: 0px;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: #8686a8;
+  color: white;
+  margin-top: 50px;
+  margin-bottom: 0px;
+}
+
+.text-about {
+  text-align: justify;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+/*# sourceMappingURL=styles.css.map */
